Fix small UI bug introduced in 836b220
- We do not want to add top margin to the footer because this creates a small
  bit of white space on the homepage, which has a dark background, not white.
- This fix introduces padding on the 'body' ID so we get the same effect
  without the 10 pixels of white space separating the footer and body on the
  homepage.

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -361,6 +361,7 @@ a:hover.emphasize-dark  {
 #body {
     background-color: #ffffff;
     color: #000000;
+    padding-bottom: 15px;
 }
 
 #hero + #body {
@@ -659,7 +660,6 @@ a:hover.emphasize-dark  {
     /* Necessary to make sure table of contents z-index flows behind this. */
     position: relative;
     z-index: 2;
-    margin-top: 10px;
     padding: 30px 15px 15px 15px;
     background-color: #2d2d2d;
     color: #ffffff;
